<resources>
    <string name="app_name">RealmDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Искать</string>
    <string name="title_film">Название фильма</string>
    <string name="director">Режиссёр</string>
    <string name="top_films">Количество лучших фильмов</string>
    <string name="valid_text_3">Текст не должен быть короче трёх символов</string>
    <string name="enter_year">Введите год</string>
    <string name="valid_text_4">Текс не должен быть короче четырёх символов</string>
    <string name="add_10_films">Добавить 10 фильмов</string>
    <string name="add_film">Добавить фильм</string>
    <string name="show_all_films">Показать все фильмы</string>
    <string name="save">Сохранить</string>
    <string name="rating">Рейтинг</string>
    <string name="year_release">Год релиза</string>
    <string name="title">Название</string>
    <string name="not_valid_releas_rating">Неверный формат \"Год релиза\" или \"Рейтинг\"</string>
    <string name="succesful">Выполнено успешно</string>
    <string name="delete_all">Удалить всё</string>
    <string name="update">Измунить</string>
</resources>
